# Projekt-Praktyczny

./: CMakeLists.txt  CoffeeMachine.cpp  CoffeeMachine.hpp  Computer.cpp  Computer.hpp  Laptop.cpp  Laptop.hpp  WeldingMachine.cpp  WeldingMachine.hpp  functions.cpp  functions.hpp  machine.cpp  machine.hpp  main.cpp  tests.cpp
